// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Floor Plan Plain View drag new AP 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
}

.c0 svg {
  width: 16px;
  height: 16px;
}

.c0 svg:before {
  content: 'a';
}

.c0 svg path {
  color: var(--acx-primary-black);
}

.c0.ant-btn-link svg path {
  color: var(--acx-accents-blue-50);
}

.c0.ant-btn-link:hover {
  color: var(--acx-accents-blue-60);
}

.c0.ant-btn-link:hover svg path {
  color: var(--acx-accents-blue-60);
}

.c0.ant-btn-primary svg path {
  color: var(--acx-primary-white) !important;
}

.c0[disabled] svg path,
.c0.ant-btn-disabled svg path {
  color: var(--acx-primary-white);
}

.c0[disabled].ant-btn-link svg path,
.c0.ant-btn-disabled.ant-btn-link svg path,
.c0[disabled].ant-btn-default svg path,
.c0.ant-btn-disabled.ant-btn-default svg path,
.c0[disabled].ant-btn-primary svg path,
.c0.ant-btn-disabled.ant-btn-primary svg path {
  color: var(--acx-neutrals-40);
}

<div
    class="ant-row ant-row-space-between"
    style="height: 2rem; align-items: center;"
  >
    <div
      class="ant-col"
    >
      <h4
        class="ant-typography"
        style="font-weight: bold; margin-bottom: 0px;"
      >
        TEST_2 (0th Floor)
      </h4>
    </div>
    <div
      class="ant-col"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
          style="margin-right: 4px;"
        >
          <button
            class="ant-btn ant-btn-link c0"
            data-testid="AddEditLinks"
            type="button"
          >
            <span>
              Edit
            </span>
          </button>
          <div
            class="ant-modal-root"
          >
            <div
              class="ant-modal-wrap"
              style="display: none;"
              tabindex="-1"
            />
          </div>
        </div>
        <span
          class="ant-space-item-split"
          style="margin-right: 4px;"
        >
          <div
            class="ant-divider ant-divider-vertical"
            role="separator"
          />
        </span>
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn ant-btn-link c0"
            type="button"
          >
            <span>
              Delete
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-divider ant-divider-horizontal"
    role="separator"
    style="margin: 0px;"
  />
  .c2.device-container {
  z-index: 3;
  width: 36px;
  height: 36px;
  position: absolute;
}

.c2.device-container:not(.context-Unplaced) {
  margin: -21px 0 0 -21px;
}

.c2.device-container.context-Album {
  width: 6px;
  height: 6px;
  margin: -3px 0 0 -3px;
}

.c2.device-container svg {
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c2.device-container .marker {
  border: 3px solid white;
  box-shadow: -2px 0px 4px -1px rgba(0,0,0,0.75);
  z-index: 1;
  width: 100%;
  height: 100%;
  border-radius: 50% 50% 50% 0;
  position: absolute;
  -webkit-transform: rotate(-45deg);
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  cursor: 'pointer';
}

.c2.device-container .marker path {
  fill: var(--acx-primary-white);
  stroke: var(--acx-neutrals-50);
}

.c2.device-container .marker.ap-status-severity-critical {
  background-color: var(--acx-semantics-red-70) !important;
}

.c2.device-container .marker.ap-status-severity-cleared {
  background-color: var(--acx-semantics-green-50) !important;
}

.c2.device-container .marker.ap-status-severity-attention {
  background-color: var(--acx-neutrals-50) !important;
}

.c2.device-container .marker.ap-status-severity-critical {
  background-color: var(--acx-semantics-red-50) !important;
}

.c2.device-container .marker.ap-status-severity-minor {
  background-color: var(--acx-semantics-yellow-50) !important;
}

.c2.device-container .marker.ap-rogue-type-offline {
  opacity: .3;
}

.c2.device-container .marker.switch-status-never-contacted-cloud {
  background-color: var(--acx-neutrals-50) !important;
}

.c2.device-container .marker.switch-status-operational {
  background-color: var(--acx-semantics-green-50) !important;
}

.c2.device-container .marker.switch-status-disconnected {
  background-color: var(--acx-semantics-red-50) !important;
}

.c2.device-container .marker.rwg-status-never-contacted-cloud {
  background-color: var(--acx-neutrals-50) !important;
}

.c2.device-container .marker.rwg-status-operational {
  background-color: var(--acx-semantics-green-50) !important;
}

.c2.device-container .marker.rwg-status-disconnected {
  background-color: var(--acx-semantics-red-50) !important;
}

.c2.device-container .marker.rwg-status-invalid-api {
  background-color: var(--acx-semantics-yellow-40) !important;
}

.c2.device-container .marker.ap-rogue-type-malicious {
  background-color: var(--acx-accents-orange-50);
}

.c2.device-container .marker.ap-rogue-type-ignored {
  background-color: var(--acx-semantics-green-70);
}

.c2.device-container .marker.ap-rogue-type-unclassified {
  background-color: var(--acx-accents-blue-60);
}

.c2.device-container .marker.ap-rogue-type-known {
  background-color: var(--acx-semantics-green-50);
}

.c2.device-container .marker:after {
  position: relative;
  border-radius: 50%;
  font-family: ruckus;
  color: white;
  font-size: 26px;
  bottom: 5px;
  left: 4px;
  position: absolute;
  -webkit-transform: rotate(41deg);
  -webkit-transform: rotate(41deg);
  -ms-transform: rotate(41deg);
  transform: rotate(41deg);
}

.c2.device-container:not(.context-Venue):not(.context-Unplaced):not(.context-Ap):not(.context-LteAp):not(.context-Switch):not(.gallery):not(.context-RogueAp) .marker {
  border-radius: 50% 50% 50% 50%;
  border: 0;
}

.c2.device-container:not(.context-Venue):not(.context-Unplaced):not(.context-Ap):not(.context-LteAp):not(.context-Switch):not(.gallery):not(.context-RogueAp) .marker:not(.gallery-mode):after {
  content: '';
}

.c2.device-container:not(.context-Venue):not(.context-Unplaced):not(.context-Ap):not(.context-LteAp):not(.context-Switch):not(.gallery):not(.context-RogueAp) .marker.gallery-mode:after {
  bottom: 7px;
  left: 7px;
}

.c2.device-container.gallery {
  width: 24px;
  height: 24px;
}

.c2.device-container.gallery .marker {
  border-radius: 50% 50% 50% 50%;
  border: 0;
  padding: 4px;
}

.c2.device-container.gallery .marker.ap:after,
.c2.device-container.gallery .marker.LTEAP:after,
.c2.device-container.gallery .marker.switches:after {
  font-size: 20px;
  bottom: 2px;
  left: 1px;
}

.c0 {
  margin: 30px auto 20px;
  position: relative;
  display: block;
  overflow: auto;
  width: 100%;
  height: 280px;
  max-width: 100%;
  max-height: 100%;
  padding-right: 35px;
}

.c1 {
  width: calc(26%);
  position: relative;
  margin: 0 auto;
}

<div
    class="c0"
  >
    <div
      class="c1"
      data-testid="image-container"
    >
      <div
        data-testid="dropContainer"
        style="position: absolute; width: 100%; height: 100%;"
      />
      <div>
         
        <div>
          <div
            class="c2 device-container context-Ap"
            draggable="true"
            style="top: calc(0%); left: calc(0%); opacity: 1;"
          >
            <div
              class="marker ap-status-severity-attention"
              style="align-items: center; display: flex; justify-content: center; cursor: pointer;"
            >
              <svg
                data-testid="SignalUp"
              />
               
            </div>
          </div>
        </div>
        <div>
          <div
            class="c2 device-container context-Ap"
            draggable="true"
            style="top: calc(undefined%); left: calc(undefined%); opacity: 1;"
          >
            <div
              class="marker switch-status-never-contacted-cloud"
              style="align-items: center; display: flex; justify-content: center; cursor: pointer;"
            >
              <svg
                data-testid="DeviceOutlined"
              />
               
            </div>
          </div>
        </div>
      </div>
      <img
        alt="TEST_2"
        data-testid="floorPlanImage"
        src="https://storage.googleapis.com/dev-alto-file-storage-0/tenant/fe892a451d7a486bbb3aee929d2dfcd1/01acff37331949c686d40b5a00822ec2-001.jpeg"
        style="max-height: 100%; width: 100%;"
      />
    </div>
  </div>
  .c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
}

.c1 svg {
  width: 16px;
  height: 16px;
}

.c1 svg:before {
  content: 'a';
}

.c1 svg path {
  color: var(--acx-primary-black);
}

.c1.ant-btn-link svg path {
  color: var(--acx-accents-blue-50);
}

.c1.ant-btn-link:hover {
  color: var(--acx-accents-blue-60);
}

.c1.ant-btn-link:hover svg path {
  color: var(--acx-accents-blue-60);
}

.c1.ant-btn-primary svg path {
  color: var(--acx-primary-white) !important;
}

.c1[disabled] svg path,
.c1.ant-btn-disabled svg path {
  color: var(--acx-primary-white);
}

.c1[disabled].ant-btn-link svg path,
.c1.ant-btn-disabled.ant-btn-link svg path,
.c1[disabled].ant-btn-default svg path,
.c1.ant-btn-disabled.ant-btn-default svg path,
.c1[disabled].ant-btn-primary svg path,
.c1.ant-btn-disabled.ant-btn-primary svg path {
  color: var(--acx-neutrals-40);
}

.c0 {
  position: absolute;
  bottom: 135px;
  z-index: 1;
  right: 15px;
  border: 1px solid var(--acx-neutrals-30);
  border-radius: 4px;
}

<div
    alignbottom="0"
    class="ant-space ant-space-vertical c0"
  >
    <div
      class="ant-space-item"
      style="margin-bottom: 0px;"
    >
      <button
        class="ant-btn ant-btn-link ant-btn-icon-only c1"
        data-testid="image-zoom-in"
        type="button"
      >
        <svg
          data-testid="MagnifyingGlassPlusOutlined"
        />
      </button>
    </div>
    <span
      class="ant-space-item-split"
      style="margin-bottom: 0px;"
    >
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
        style="line-height: 0px; margin: 0px;"
      />
    </span>
    <div
      class="ant-space-item"
      style="margin-bottom: 0px;"
    >
      <button
        class="ant-btn ant-btn-link ant-btn-icon-only c1"
        data-testid="image-zoom-out"
        type="button"
      >
        <svg
          data-testid="MagnifyingGlassMinusOutlined"
        />
      </button>
    </div>
    <span
      class="ant-space-item-split"
      style="margin-bottom: 0px;"
    >
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
        style="line-height: 0px; margin: 0px;"
      />
    </span>
    <div
      class="ant-space-item"
      style="margin-bottom: 0px;"
    >
      <button
        class="ant-btn ant-btn-link ant-btn-icon-only c1"
        data-testid="image-zoom-original"
        type="button"
      >
        <svg
          data-testid="SearchFullOutlined"
        />
      </button>
    </div>
    <span
      class="ant-space-item-split"
      style="margin-bottom: 0px;"
    >
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
        style="line-height: 0px; margin: 0px;"
      />
    </span>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-link ant-btn-icon-only c1"
        data-testid="image-zoom-fit"
        type="button"
      >
        <svg
          data-testid="SearchFitOutlined"
        />
      </button>
    </div>
  </div>
  .c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
}

.c1 svg {
  width: 16px;
  height: 16px;
}

.c1 svg:before {
  content: 'a';
}

.c1 svg path {
  color: var(--acx-primary-black);
}

.c1.ant-btn-link svg path {
  color: var(--acx-accents-blue-50);
}

.c1.ant-btn-link:hover {
  color: var(--acx-accents-blue-60);
}

.c1.ant-btn-link:hover svg path {
  color: var(--acx-accents-blue-60);
}

.c1.ant-btn-primary svg path {
  color: var(--acx-primary-white) !important;
}

.c1[disabled] svg path,
.c1.ant-btn-disabled svg path {
  color: var(--acx-primary-white);
}

.c1[disabled].ant-btn-link svg path,
.c1.ant-btn-disabled.ant-btn-link svg path,
.c1[disabled].ant-btn-default svg path,
.c1.ant-btn-disabled.ant-btn-default svg path,
.c1[disabled].ant-btn-primary svg path,
.c1.ant-btn-disabled.ant-btn-primary svg path {
  color: var(--acx-neutrals-40);
}

.c6.device-container {
  z-index: 3;
  width: 36px;
  height: 36px;
  position: absolute;
}

.c6.device-container:not(.context-Unplaced) {
  margin: -21px 0 0 -21px;
}

.c6.device-container.context-Album {
  width: 6px;
  height: 6px;
  margin: -3px 0 0 -3px;
}

.c6.device-container svg {
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c6.device-container .marker {
  border: 3px solid white;
  box-shadow: -2px 0px 4px -1px rgba(0,0,0,0.75);
  z-index: 1;
  width: 100%;
  height: 100%;
  border-radius: 50% 50% 50% 0;
  position: absolute;
  -webkit-transform: rotate(-45deg);
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  cursor: 'pointer';
}

.c6.device-container .marker path {
  fill: var(--acx-primary-white);
  stroke: var(--acx-neutrals-50);
}

.c6.device-container .marker.ap-status-severity-critical {
  background-color: var(--acx-semantics-red-70) !important;
}

.c6.device-container .marker.ap-status-severity-cleared {
  background-color: var(--acx-semantics-green-50) !important;
}

.c6.device-container .marker.ap-status-severity-attention {
  background-color: var(--acx-neutrals-50) !important;
}

.c6.device-container .marker.ap-status-severity-critical {
  background-color: var(--acx-semantics-red-50) !important;
}

.c6.device-container .marker.ap-status-severity-minor {
  background-color: var(--acx-semantics-yellow-50) !important;
}

.c6.device-container .marker.ap-rogue-type-offline {
  opacity: .3;
}

.c6.device-container .marker.switch-status-never-contacted-cloud {
  background-color: var(--acx-neutrals-50) !important;
}

.c6.device-container .marker.switch-status-operational {
  background-color: var(--acx-semantics-green-50) !important;
}

.c6.device-container .marker.switch-status-disconnected {
  background-color: var(--acx-semantics-red-50) !important;
}

.c6.device-container .marker.rwg-status-never-contacted-cloud {
  background-color: var(--acx-neutrals-50) !important;
}

.c6.device-container .marker.rwg-status-operational {
  background-color: var(--acx-semantics-green-50) !important;
}

.c6.device-container .marker.rwg-status-disconnected {
  background-color: var(--acx-semantics-red-50) !important;
}

.c6.device-container .marker.rwg-status-invalid-api {
  background-color: var(--acx-semantics-yellow-40) !important;
}

.c6.device-container .marker.ap-rogue-type-malicious {
  background-color: var(--acx-accents-orange-50);
}

.c6.device-container .marker.ap-rogue-type-ignored {
  background-color: var(--acx-semantics-green-70);
}

.c6.device-container .marker.ap-rogue-type-unclassified {
  background-color: var(--acx-accents-blue-60);
}

.c6.device-container .marker.ap-rogue-type-known {
  background-color: var(--acx-semantics-green-50);
}

.c6.device-container .marker:after {
  position: relative;
  border-radius: 50%;
  font-family: ruckus;
  color: white;
  font-size: 26px;
  bottom: 5px;
  left: 4px;
  position: absolute;
  -webkit-transform: rotate(41deg);
  -webkit-transform: rotate(41deg);
  -ms-transform: rotate(41deg);
  transform: rotate(41deg);
}

.c6.device-container:not(.context-Venue):not(.context-Unplaced):not(.context-Ap):not(.context-LteAp):not(.context-Switch):not(.gallery):not(.context-RogueAp) .marker {
  border-radius: 50% 50% 50% 50%;
  border: 0;
}

.c6.device-container:not(.context-Venue):not(.context-Unplaced):not(.context-Ap):not(.context-LteAp):not(.context-Switch):not(.gallery):not(.context-RogueAp) .marker:not(.gallery-mode):after {
  content: '';
}

.c6.device-container:not(.context-Venue):not(.context-Unplaced):not(.context-Ap):not(.context-LteAp):not(.context-Switch):not(.gallery):not(.context-RogueAp) .marker.gallery-mode:after {
  bottom: 7px;
  left: 7px;
}

.c6.device-container.gallery {
  width: 24px;
  height: 24px;
}

.c6.device-container.gallery .marker {
  border-radius: 50% 50% 50% 50%;
  border: 0;
  padding: 4px;
}

.c6.device-container.gallery .marker.ap:after,
.c6.device-container.gallery .marker.LTEAP:after,
.c6.device-container.gallery .marker.switches:after {
  font-size: 20px;
  bottom: 2px;
  left: 1px;
}

.c3 {
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
  overflow-x: scroll;
  width: 100%;
  height: 80px;
  overflow-y: hidden;
  overflow: overlay;
}

.c5 {
  width: 100px;
  padding: 6px;
  border-radius: 4px;
  height: 68px;
  border: 1px solid;
  border-color: var(--acx-accents-orange-55);
  box-shadow: none;
}

.c8 {
  width: 100px;
  padding: 6px;
  border-radius: 4px;
  height: 68px;
  border: 1px solid;
  border-color: var(--acx-neutrals-30);
  box-shadow: none;
}

.c0 {
  padding-right: 4px;
}

.c2 {
  border: 1px solid var(--acx-neutrals-30);
  height: 68px;
  width: 28px;
}

.c2 svg {
  width: 18px;
  height: 18px;
}

.c7 {
  position: absolute;
  width: 100px;
  height: 20px;
  top: 48px;
  opacity: 0.95;
  border-radius: 0px 0px 4px 4px;
  color: var(--acx-primary-white);
  text-align: center;
  font-style: normal;
  font-weight: var(--acx-subtitle-6-font-weight);
  font-size: var(--acx-subtitle-6-font-size);
  line-height: var(--acx-subtitle-4-line-height);
  background: var(--acx-accents-orange-55);
  text-overflow: ellipsis;
  overflow: auto;
  padding: 0px 4px;
}

.c9 {
  position: absolute;
  width: 100px;
  height: 20px;
  top: 48px;
  opacity: 0.95;
  border-radius: 0px 0px 4px 4px;
  color: var(--acx-primary-white);
  text-align: center;
  font-style: normal;
  font-weight: var(--acx-subtitle-6-font-weight);
  font-size: var(--acx-subtitle-6-font-size);
  line-height: var(--acx-subtitle-4-line-height);
  background: var(--acx-neutrals-80);
  text-overflow: ellipsis;
  overflow: auto;
  padding: 0px 4px;
}

.c4 {
  position: relative;
  cursor: pointer;
}

<div
    class="ant-row"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center c0"
    >
      <div
        class="ant-space-item"
      >
        <button
          class="ant-btn ant-btn-default ant-btn-icon-only c1 c2"
          data-testid="galleryIcon"
          type="button"
        >
          <svg
            data-testid="ApplicationsSolid"
          />
        </button>
      </div>
    </div>
    <div
      class="ant-col ant-col-23"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center c3"
      >
        <div
          class="ant-space-item"
          style="margin-right: 4px;"
        >
          <div
            class="c4"
          >
            <div
              active="1"
              class="ant-card-grid c5"
              data-testid="thumbnailBg"
            >
              <div
                style="width: 100%; height: 53px; position: relative;"
              >
                <div>
                   
                  <div>
                    <div
                      class="c6 device-container context-Album"
                      draggable="true"
                      style="top: calc(0%); left: calc(0%); opacity: 1;"
                    >
                      <div
                        class="marker ap-status-severity-attention"
                        style="align-items: center; display: flex; justify-content: center; cursor: pointer;"
                      >
                         
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="c6 device-container context-Album"
                      draggable="true"
                      style="top: calc(undefined%); left: calc(undefined%); opacity: 1;"
                    >
                      <div
                        class="marker switch-status-never-contacted-cloud"
                        style="align-items: center; display: flex; justify-content: center; cursor: pointer;"
                      >
                         
                      </div>
                    </div>
                  </div>
                </div>
                <img
                  alt="Thumbnail for TEST_2"
                  data-testid="thumbnailBgImage"
                  src="https://storage.googleapis.com/dev-alto-file-storage-0/tenant/fe892a451d7a486bbb3aee929d2dfcd1/01acff37331949c686d40b5a00822ec2-001.jpeg"
                  style="width: 100%; height: 100%;"
                />
              </div>
            </div>
            <div
              class="c7"
            >
              TEST_2
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
        >
          <div
            class="c4"
          >
            <div
              active="0"
              class="ant-card-grid c8"
              data-testid="thumbnailBg"
            >
              <div
                style="width: 100%; height: 53px; position: relative;"
              >
                <div>
                   
                </div>
                <img
                  alt="Thumbnail for dscx"
                  data-testid="thumbnailBgImage"
                  src="https://storage.googleapis.com/dev-alto-file-storage-0/tenant/fe892a451d7a486bbb3aee929d2dfcd1/7231da344778480d88f37f0cca1c534f-001.png"
                  style="width: 100%; height: 100%;"
                />
              </div>
            </div>
            <div
              class="c9"
            >
              dscx
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Floor Plan Plain View should render correctly Plain View 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
}

.c0 svg {
  width: 16px;
  height: 16px;
}

.c0 svg:before {
  content: 'a';
}

.c0 svg path {
  color: var(--acx-primary-black);
}

.c0.ant-btn-link svg path {
  color: var(--acx-accents-blue-50);
}

.c0.ant-btn-link:hover {
  color: var(--acx-accents-blue-60);
}

.c0.ant-btn-link:hover svg path {
  color: var(--acx-accents-blue-60);
}

.c0.ant-btn-primary svg path {
  color: var(--acx-primary-white) !important;
}

.c0[disabled] svg path,
.c0.ant-btn-disabled svg path {
  color: var(--acx-primary-white);
}

.c0[disabled].ant-btn-link svg path,
.c0.ant-btn-disabled.ant-btn-link svg path,
.c0[disabled].ant-btn-default svg path,
.c0.ant-btn-disabled.ant-btn-default svg path,
.c0[disabled].ant-btn-primary svg path,
.c0.ant-btn-disabled.ant-btn-primary svg path {
  color: var(--acx-neutrals-40);
}

<div
    class="ant-row ant-row-space-between"
    style="height: 2rem; align-items: center;"
  >
    <div
      class="ant-col"
    >
      <h4
        class="ant-typography"
        style="font-weight: bold; margin-bottom: 0px;"
      >
        TEST_2 (0th Floor)
      </h4>
    </div>
    <div
      class="ant-col"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
          style="margin-right: 4px;"
        >
          <button
            class="ant-btn ant-btn-link c0"
            data-testid="AddEditLinks"
            type="button"
          >
            <span>
              Edit
            </span>
          </button>
          <div
            class="ant-modal-root"
          >
            <div
              class="ant-modal-wrap"
              style="display: none;"
              tabindex="-1"
            />
          </div>
        </div>
        <span
          class="ant-space-item-split"
          style="margin-right: 4px;"
        >
          <div
            class="ant-divider ant-divider-vertical"
            role="separator"
          />
        </span>
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn ant-btn-link c0"
            type="button"
          >
            <span>
              Delete
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-divider ant-divider-horizontal"
    role="separator"
    style="margin: 0px;"
  />
  .c2.device-container {
  z-index: 3;
  width: 36px;
  height: 36px;
  position: absolute;
}

.c2.device-container:not(.context-Unplaced) {
  margin: -21px 0 0 -21px;
}

.c2.device-container.context-Album {
  width: 6px;
  height: 6px;
  margin: -3px 0 0 -3px;
}

.c2.device-container svg {
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c2.device-container .marker {
  border: 3px solid white;
  box-shadow: -2px 0px 4px -1px rgba(0,0,0,0.75);
  z-index: 1;
  width: 100%;
  height: 100%;
  border-radius: 50% 50% 50% 0;
  position: absolute;
  -webkit-transform: rotate(-45deg);
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  cursor: 'pointer';
}

.c2.device-container .marker path {
  fill: var(--acx-primary-white);
  stroke: var(--acx-neutrals-50);
}

.c2.device-container .marker.ap-status-severity-critical {
  background-color: var(--acx-semantics-red-70) !important;
}

.c2.device-container .marker.ap-status-severity-cleared {
  background-color: var(--acx-semantics-green-50) !important;
}

.c2.device-container .marker.ap-status-severity-attention {
  background-color: var(--acx-neutrals-50) !important;
}

.c2.device-container .marker.ap-status-severity-critical {
  background-color: var(--acx-semantics-red-50) !important;
}

.c2.device-container .marker.ap-status-severity-minor {
  background-color: var(--acx-semantics-yellow-50) !important;
}

.c2.device-container .marker.ap-rogue-type-offline {
  opacity: .3;
}

.c2.device-container .marker.switch-status-never-contacted-cloud {
  background-color: var(--acx-neutrals-50) !important;
}

.c2.device-container .marker.switch-status-operational {
  background-color: var(--acx-semantics-green-50) !important;
}

.c2.device-container .marker.switch-status-disconnected {
  background-color: var(--acx-semantics-red-50) !important;
}

.c2.device-container .marker.rwg-status-never-contacted-cloud {
  background-color: var(--acx-neutrals-50) !important;
}

.c2.device-container .marker.rwg-status-operational {
  background-color: var(--acx-semantics-green-50) !important;
}

.c2.device-container .marker.rwg-status-disconnected {
  background-color: var(--acx-semantics-red-50) !important;
}

.c2.device-container .marker.rwg-status-invalid-api {
  background-color: var(--acx-semantics-yellow-40) !important;
}

.c2.device-container .marker.ap-rogue-type-malicious {
  background-color: var(--acx-accents-orange-50);
}

.c2.device-container .marker.ap-rogue-type-ignored {
  background-color: var(--acx-semantics-green-70);
}

.c2.device-container .marker.ap-rogue-type-unclassified {
  background-color: var(--acx-accents-blue-60);
}

.c2.device-container .marker.ap-rogue-type-known {
  background-color: var(--acx-semantics-green-50);
}

.c2.device-container .marker:after {
  position: relative;
  border-radius: 50%;
  font-family: ruckus;
  color: white;
  font-size: 26px;
  bottom: 5px;
  left: 4px;
  position: absolute;
  -webkit-transform: rotate(41deg);
  -webkit-transform: rotate(41deg);
  -ms-transform: rotate(41deg);
  transform: rotate(41deg);
}

.c2.device-container:not(.context-Venue):not(.context-Unplaced):not(.context-Ap):not(.context-LteAp):not(.context-Switch):not(.gallery):not(.context-RogueAp) .marker {
  border-radius: 50% 50% 50% 50%;
  border: 0;
}

.c2.device-container:not(.context-Venue):not(.context-Unplaced):not(.context-Ap):not(.context-LteAp):not(.context-Switch):not(.gallery):not(.context-RogueAp) .marker:not(.gallery-mode):after {
  content: '';
}

.c2.device-container:not(.context-Venue):not(.context-Unplaced):not(.context-Ap):not(.context-LteAp):not(.context-Switch):not(.gallery):not(.context-RogueAp) .marker.gallery-mode:after {
  bottom: 7px;
  left: 7px;
}

.c2.device-container.gallery {
  width: 24px;
  height: 24px;
}

.c2.device-container.gallery .marker {
  border-radius: 50% 50% 50% 50%;
  border: 0;
  padding: 4px;
}

.c2.device-container.gallery .marker.ap:after,
.c2.device-container.gallery .marker.LTEAP:after,
.c2.device-container.gallery .marker.switches:after {
  font-size: 20px;
  bottom: 2px;
  left: 1px;
}

.c0 {
  margin: 30px auto 20px;
  position: relative;
  display: block;
  overflow: auto;
  width: 100%;
  height: 280px;
  max-width: 100%;
  max-height: 100%;
  padding-right: 35px;
}

.c1 {
  width: calc(26%);
  position: relative;
  margin: 0 auto;
}

<div
    class="c0"
  >
    <div
      class="c1"
      data-testid="image-container"
    >
      <div
        data-testid="dropContainer"
        style="position: absolute; width: 100%; height: 100%;"
      />
      <div>
         
        <div>
          <div
            class="c2 device-container context-Ap"
            draggable="true"
            style="top: calc(9.839357%); left: calc(65.20548%); opacity: 1;"
          >
            <div
              class="marker ap-status-severity-attention"
              style="align-items: center; display: flex; justify-content: center; cursor: pointer;"
            >
              <svg
                data-testid="SignalUp"
              />
               
            </div>
          </div>
        </div>
        <div>
          <div
            class="c2 device-container context-Ap"
            draggable="true"
            style="top: calc(undefined%); left: calc(undefined%); opacity: 1;"
          >
            <div
              class="marker switch-status-never-contacted-cloud"
              style="align-items: center; display: flex; justify-content: center; cursor: pointer;"
            >
              <svg
                data-testid="DeviceOutlined"
              />
               
            </div>
          </div>
        </div>
      </div>
      <img
        alt="TEST_2"
        data-testid="floorPlanImage"
        src="https://storage.googleapis.com/dev-alto-file-storage-0/tenant/fe892a451d7a486bbb3aee929d2dfcd1/01acff37331949c686d40b5a00822ec2-001.jpeg"
        style="max-height: 100%; width: 100%;"
      />
    </div>
  </div>
  .c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
}

.c1 svg {
  width: 16px;
  height: 16px;
}

.c1 svg:before {
  content: 'a';
}

.c1 svg path {
  color: var(--acx-primary-black);
}

.c1.ant-btn-link svg path {
  color: var(--acx-accents-blue-50);
}

.c1.ant-btn-link:hover {
  color: var(--acx-accents-blue-60);
}

.c1.ant-btn-link:hover svg path {
  color: var(--acx-accents-blue-60);
}

.c1.ant-btn-primary svg path {
  color: var(--acx-primary-white) !important;
}

.c1[disabled] svg path,
.c1.ant-btn-disabled svg path {
  color: var(--acx-primary-white);
}

.c1[disabled].ant-btn-link svg path,
.c1.ant-btn-disabled.ant-btn-link svg path,
.c1[disabled].ant-btn-default svg path,
.c1.ant-btn-disabled.ant-btn-default svg path,
.c1[disabled].ant-btn-primary svg path,
.c1.ant-btn-disabled.ant-btn-primary svg path {
  color: var(--acx-neutrals-40);
}

.c0 {
  position: absolute;
  bottom: 135px;
  z-index: 1;
  right: 15px;
  border: 1px solid var(--acx-neutrals-30);
  border-radius: 4px;
}

<div
    alignbottom="0"
    class="ant-space ant-space-vertical c0"
  >
    <div
      class="ant-space-item"
      style="margin-bottom: 0px;"
    >
      <button
        class="ant-btn ant-btn-link ant-btn-icon-only c1"
        data-testid="image-zoom-in"
        type="button"
      >
        <svg
          data-testid="MagnifyingGlassPlusOutlined"
        />
      </button>
    </div>
    <span
      class="ant-space-item-split"
      style="margin-bottom: 0px;"
    >
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
        style="line-height: 0px; margin: 0px;"
      />
    </span>
    <div
      class="ant-space-item"
      style="margin-bottom: 0px;"
    >
      <button
        class="ant-btn ant-btn-link ant-btn-icon-only c1"
        data-testid="image-zoom-out"
        type="button"
      >
        <svg
          data-testid="MagnifyingGlassMinusOutlined"
        />
      </button>
    </div>
    <span
      class="ant-space-item-split"
      style="margin-bottom: 0px;"
    >
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
        style="line-height: 0px; margin: 0px;"
      />
    </span>
    <div
      class="ant-space-item"
      style="margin-bottom: 0px;"
    >
      <button
        class="ant-btn ant-btn-link ant-btn-icon-only c1"
        data-testid="image-zoom-original"
        type="button"
      >
        <svg
          data-testid="SearchFullOutlined"
        />
      </button>
    </div>
    <span
      class="ant-space-item-split"
      style="margin-bottom: 0px;"
    >
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
        style="line-height: 0px; margin: 0px;"
      />
    </span>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-link ant-btn-icon-only c1"
        data-testid="image-zoom-fit"
        type="button"
      >
        <svg
          data-testid="SearchFitOutlined"
        />
      </button>
    </div>
  </div>
  .c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
}

.c1 svg {
  width: 16px;
  height: 16px;
}

.c1 svg:before {
  content: 'a';
}

.c1 svg path {
  color: var(--acx-primary-black);
}

.c1.ant-btn-link svg path {
  color: var(--acx-accents-blue-50);
}

.c1.ant-btn-link:hover {
  color: var(--acx-accents-blue-60);
}

.c1.ant-btn-link:hover svg path {
  color: var(--acx-accents-blue-60);
}

.c1.ant-btn-primary svg path {
  color: var(--acx-primary-white) !important;
}

.c1[disabled] svg path,
.c1.ant-btn-disabled svg path {
  color: var(--acx-primary-white);
}

.c1[disabled].ant-btn-link svg path,
.c1.ant-btn-disabled.ant-btn-link svg path,
.c1[disabled].ant-btn-default svg path,
.c1.ant-btn-disabled.ant-btn-default svg path,
.c1[disabled].ant-btn-primary svg path,
.c1.ant-btn-disabled.ant-btn-primary svg path {
  color: var(--acx-neutrals-40);
}

.c6.device-container {
  z-index: 3;
  width: 36px;
  height: 36px;
  position: absolute;
}

.c6.device-container:not(.context-Unplaced) {
  margin: -21px 0 0 -21px;
}

.c6.device-container.context-Album {
  width: 6px;
  height: 6px;
  margin: -3px 0 0 -3px;
}

.c6.device-container svg {
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c6.device-container .marker {
  border: 3px solid white;
  box-shadow: -2px 0px 4px -1px rgba(0,0,0,0.75);
  z-index: 1;
  width: 100%;
  height: 100%;
  border-radius: 50% 50% 50% 0;
  position: absolute;
  -webkit-transform: rotate(-45deg);
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  cursor: 'pointer';
}

.c6.device-container .marker path {
  fill: var(--acx-primary-white);
  stroke: var(--acx-neutrals-50);
}

.c6.device-container .marker.ap-status-severity-critical {
  background-color: var(--acx-semantics-red-70) !important;
}

.c6.device-container .marker.ap-status-severity-cleared {
  background-color: var(--acx-semantics-green-50) !important;
}

.c6.device-container .marker.ap-status-severity-attention {
  background-color: var(--acx-neutrals-50) !important;
}

.c6.device-container .marker.ap-status-severity-critical {
  background-color: var(--acx-semantics-red-50) !important;
}

.c6.device-container .marker.ap-status-severity-minor {
  background-color: var(--acx-semantics-yellow-50) !important;
}

.c6.device-container .marker.ap-rogue-type-offline {
  opacity: .3;
}

.c6.device-container .marker.switch-status-never-contacted-cloud {
  background-color: var(--acx-neutrals-50) !important;
}

.c6.device-container .marker.switch-status-operational {
  background-color: var(--acx-semantics-green-50) !important;
}

.c6.device-container .marker.switch-status-disconnected {
  background-color: var(--acx-semantics-red-50) !important;
}

.c6.device-container .marker.rwg-status-never-contacted-cloud {
  background-color: var(--acx-neutrals-50) !important;
}

.c6.device-container .marker.rwg-status-operational {
  background-color: var(--acx-semantics-green-50) !important;
}

.c6.device-container .marker.rwg-status-disconnected {
  background-color: var(--acx-semantics-red-50) !important;
}

.c6.device-container .marker.rwg-status-invalid-api {
  background-color: var(--acx-semantics-yellow-40) !important;
}

.c6.device-container .marker.ap-rogue-type-malicious {
  background-color: var(--acx-accents-orange-50);
}

.c6.device-container .marker.ap-rogue-type-ignored {
  background-color: var(--acx-semantics-green-70);
}

.c6.device-container .marker.ap-rogue-type-unclassified {
  background-color: var(--acx-accents-blue-60);
}

.c6.device-container .marker.ap-rogue-type-known {
  background-color: var(--acx-semantics-green-50);
}

.c6.device-container .marker:after {
  position: relative;
  border-radius: 50%;
  font-family: ruckus;
  color: white;
  font-size: 26px;
  bottom: 5px;
  left: 4px;
  position: absolute;
  -webkit-transform: rotate(41deg);
  -webkit-transform: rotate(41deg);
  -ms-transform: rotate(41deg);
  transform: rotate(41deg);
}

.c6.device-container:not(.context-Venue):not(.context-Unplaced):not(.context-Ap):not(.context-LteAp):not(.context-Switch):not(.gallery):not(.context-RogueAp) .marker {
  border-radius: 50% 50% 50% 50%;
  border: 0;
}

.c6.device-container:not(.context-Venue):not(.context-Unplaced):not(.context-Ap):not(.context-LteAp):not(.context-Switch):not(.gallery):not(.context-RogueAp) .marker:not(.gallery-mode):after {
  content: '';
}

.c6.device-container:not(.context-Venue):not(.context-Unplaced):not(.context-Ap):not(.context-LteAp):not(.context-Switch):not(.gallery):not(.context-RogueAp) .marker.gallery-mode:after {
  bottom: 7px;
  left: 7px;
}

.c6.device-container.gallery {
  width: 24px;
  height: 24px;
}

.c6.device-container.gallery .marker {
  border-radius: 50% 50% 50% 50%;
  border: 0;
  padding: 4px;
}

.c6.device-container.gallery .marker.ap:after,
.c6.device-container.gallery .marker.LTEAP:after,
.c6.device-container.gallery .marker.switches:after {
  font-size: 20px;
  bottom: 2px;
  left: 1px;
}

.c3 {
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
  overflow-x: scroll;
  width: 100%;
  height: 80px;
  overflow-y: hidden;
  overflow: overlay;
}

.c5 {
  width: 100px;
  padding: 6px;
  border-radius: 4px;
  height: 68px;
  border: 1px solid;
  border-color: var(--acx-accents-orange-55);
  box-shadow: none;
}

.c8 {
  width: 100px;
  padding: 6px;
  border-radius: 4px;
  height: 68px;
  border: 1px solid;
  border-color: var(--acx-neutrals-30);
  box-shadow: none;
}

.c0 {
  padding-right: 4px;
}

.c2 {
  border: 1px solid var(--acx-neutrals-30);
  height: 68px;
  width: 28px;
}

.c2 svg {
  width: 18px;
  height: 18px;
}

.c7 {
  position: absolute;
  width: 100px;
  height: 20px;
  top: 48px;
  opacity: 0.95;
  border-radius: 0px 0px 4px 4px;
  color: var(--acx-primary-white);
  text-align: center;
  font-style: normal;
  font-weight: var(--acx-subtitle-6-font-weight);
  font-size: var(--acx-subtitle-6-font-size);
  line-height: var(--acx-subtitle-4-line-height);
  background: var(--acx-accents-orange-55);
  text-overflow: ellipsis;
  overflow: auto;
  padding: 0px 4px;
}

.c9 {
  position: absolute;
  width: 100px;
  height: 20px;
  top: 48px;
  opacity: 0.95;
  border-radius: 0px 0px 4px 4px;
  color: var(--acx-primary-white);
  text-align: center;
  font-style: normal;
  font-weight: var(--acx-subtitle-6-font-weight);
  font-size: var(--acx-subtitle-6-font-size);
  line-height: var(--acx-subtitle-4-line-height);
  background: var(--acx-neutrals-80);
  text-overflow: ellipsis;
  overflow: auto;
  padding: 0px 4px;
}

.c4 {
  position: relative;
  cursor: pointer;
}

<div
    class="ant-row"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center c0"
    >
      <div
        class="ant-space-item"
      >
        <button
          class="ant-btn ant-btn-default ant-btn-icon-only c1 c2"
          data-testid="galleryIcon"
          type="button"
        >
          <svg
            data-testid="ApplicationsSolid"
          />
        </button>
      </div>
    </div>
    <div
      class="ant-col ant-col-23"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center c3"
      >
        <div
          class="ant-space-item"
          style="margin-right: 4px;"
        >
          <div
            class="c4"
          >
            <div
              active="1"
              class="ant-card-grid c5"
              data-testid="thumbnailBg"
            >
              <div
                style="width: 100%; height: 53px; position: relative;"
              >
                <div>
                   
                  <div>
                    <div
                      class="c6 device-container context-Album"
                      draggable="true"
                      style="top: calc(9.839357%); left: calc(65.20548%); opacity: 1;"
                    >
                      <div
                        class="marker ap-status-severity-attention"
                        style="align-items: center; display: flex; justify-content: center; cursor: pointer;"
                      >
                         
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="c6 device-container context-Album"
                      draggable="true"
                      style="top: calc(undefined%); left: calc(undefined%); opacity: 1;"
                    >
                      <div
                        class="marker switch-status-never-contacted-cloud"
                        style="align-items: center; display: flex; justify-content: center; cursor: pointer;"
                      >
                         
                      </div>
                    </div>
                  </div>
                </div>
                <img
                  alt="Thumbnail for TEST_2"
                  data-testid="thumbnailBgImage"
                  src="https://storage.googleapis.com/dev-alto-file-storage-0/tenant/fe892a451d7a486bbb3aee929d2dfcd1/01acff37331949c686d40b5a00822ec2-001.jpeg"
                  style="width: 100%; height: 100%;"
                />
              </div>
            </div>
            <div
              class="c7"
            >
              TEST_2
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
        >
          <div
            class="c4"
          >
            <div
              active="0"
              class="ant-card-grid c8"
              data-testid="thumbnailBg"
            >
              <div
                style="width: 100%; height: 53px; position: relative;"
              >
                <div>
                   
                </div>
                <img
                  alt="Thumbnail for dscx"
                  data-testid="thumbnailBgImage"
                  src="https://storage.googleapis.com/dev-alto-file-storage-0/tenant/fe892a451d7a486bbb3aee929d2dfcd1/7231da344778480d88f37f0cca1c534f-001.png"
                  style="width: 100%; height: 100%;"
                />
              </div>
            </div>
            <div
              class="c9"
            >
              dscx
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Floor Plan Plain View show single floorplan 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-space-between"
    style="height: 2rem; align-items: center;"
  >
    <div
      class="ant-col"
    >
      <h4
        class="ant-typography"
        style="font-weight: bold; margin-bottom: 0px;"
      >
        TEST_2 (0th Floor)
      </h4>
    </div>
    <div
      class="ant-col"
    />
  </div>
  <div
    class="ant-divider ant-divider-horizontal"
    role="separator"
    style="margin: 0px;"
  />
  .c4 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  background-color: var(--acx-neutrals-10);
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
}

.c0 {
  margin: 30px auto 20px;
  position: relative;
  display: block;
  overflow: auto;
  width: 100%;
  height: 280px;
  max-width: 100%;
  max-height: 100%;
  padding-right: 35px;
}

.c2 {
  width: calc(100%);
  position: relative;
  margin: 0 auto;
}

.c3 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1.rogue-help-info {
  position: absolute;
  bottom: 30px;
  left: 20px;
  z-index: 2;
}

.c1.rogue-help-info svg path {
  stroke: var(--acx-primary-white);
}

<div
    class="c0"
  >
    <div
      class="c1 rogue-help-info"
    >
      <svg
        class="ant-tooltip-open"
        data-testid="QuestionMarkCircleOutlined"
      />
    </div>
    <div
      class="c2"
      data-testid="image-container"
    >
      <div
        data-testid="dropContainer"
        style="background-color: rgba(0, 0, 0, 0.4); position: absolute; width: 100%; height: 100%;"
      />
      <img
        alt="TEST_2"
        data-testid="floorPlanImage"
        src="https://storage.googleapis.com/dev-alto-file-storage-0/tenant/fe892a451d7a486bbb3aee929d2dfcd1/01acff37331949c686d40b5a00822ec2-001.jpeg"
        style="max-height: 100%; width: 100%;"
      />
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <span
            aria-label="loader"
            class=""
            role="img"
          >
            <div
              aria-busy="true"
              aria-live="polite"
              class="ant-spin ant-spin-lg ant-spin-spinning"
            >
              <span
                class="ant-spin-dot ant-spin-dot-spin"
              >
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
              </span>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
  .c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
}

.c1 svg {
  width: 16px;
  height: 16px;
}

.c1 svg:before {
  content: 'a';
}

.c1 svg path {
  color: var(--acx-primary-black);
}

.c1.ant-btn-link svg path {
  color: var(--acx-accents-blue-50);
}

.c1.ant-btn-link:hover {
  color: var(--acx-accents-blue-60);
}

.c1.ant-btn-link:hover svg path {
  color: var(--acx-accents-blue-60);
}

.c1.ant-btn-primary svg path {
  color: var(--acx-primary-white) !important;
}

.c1[disabled] svg path,
.c1.ant-btn-disabled svg path {
  color: var(--acx-primary-white);
}

.c1[disabled].ant-btn-link svg path,
.c1.ant-btn-disabled.ant-btn-link svg path,
.c1[disabled].ant-btn-default svg path,
.c1.ant-btn-disabled.ant-btn-default svg path,
.c1[disabled].ant-btn-primary svg path,
.c1.ant-btn-disabled.ant-btn-primary svg path {
  color: var(--acx-neutrals-40);
}

.c0 {
  position: absolute;
  bottom: 88px;
  z-index: 1;
  right: 15px;
  border: 1px solid var(--acx-neutrals-30);
  border-radius: 4px;
}

<div
    alignbottom="1"
    class="ant-space ant-space-vertical c0"
  >
    <div
      class="ant-space-item"
      style="margin-bottom: 0px;"
    >
      <button
        class="ant-btn ant-btn-link ant-btn-icon-only c1"
        data-testid="image-zoom-in"
        type="button"
      >
        <svg
          data-testid="MagnifyingGlassPlusOutlined"
        />
      </button>
    </div>
    <span
      class="ant-space-item-split"
      style="margin-bottom: 0px;"
    >
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
        style="line-height: 0px; margin: 0px;"
      />
    </span>
    <div
      class="ant-space-item"
      style="margin-bottom: 0px;"
    >
      <button
        class="ant-btn ant-btn-link ant-btn-icon-only c1"
        data-testid="image-zoom-out"
        type="button"
      >
        <svg
          data-testid="MagnifyingGlassMinusOutlined"
        />
      </button>
    </div>
    <span
      class="ant-space-item-split"
      style="margin-bottom: 0px;"
    >
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
        style="line-height: 0px; margin: 0px;"
      />
    </span>
    <div
      class="ant-space-item"
      style="margin-bottom: 0px;"
    >
      <button
        class="ant-btn ant-btn-link ant-btn-icon-only c1"
        data-testid="image-zoom-original"
        type="button"
      >
        <svg
          data-testid="SearchFullOutlined"
        />
      </button>
    </div>
    <span
      class="ant-space-item-split"
      style="margin-bottom: 0px;"
    >
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
        style="line-height: 0px; margin: 0px;"
      />
    </span>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-link ant-btn-icon-only c1"
        data-testid="image-zoom-fit"
        type="button"
      >
        <svg
          data-testid="SearchFitOutlined"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;
